# kr_50_r2500_tests

./: CMakeLists.txt  package.xml
config/: arbitrator_params.yaml  coke_scene.yaml  exec_params.yaml  go_to_location_server.yaml  learning_params.yaml  objects_description.yaml  policy_params.yaml
config/params/: collection_name.yaml  exec_params.yaml
config/trees/: action1_tree.xml  main_tree.xml  test_tree.xml
include/kr_50_r2500_tests/: bt_goto_class.h
launch/: coke_scene_spawner.launch  coke_test.launch  goto.launch  load_param.launch  save_param_on_mongo.launch  set_collection_name.launch
launch/gazebo_launch/: kr_50_r2500_gazebo_coke.launch  kr_50_r2500_world_coke.launch
launch/rviz_scene_launch/: scene_spawner_coke.launch
src/: param_mongo_utils.py  save_param_on_mongo.py  tree_test.cpp
src/kr_50_r2500_tests/: bt_goto_class.cpp
trees/: test_tree.xml
world/: kr_50_r2500_coke.world
