<?xml version="1.0"?>
<package format="2">
  <name>kr_50_r2500_tests</name>
  <version>0.0.0</version>
  <description>The kr_50_r2500_tests package</description>

  <maintainer email="gauss@todo.todo">gauss</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>message_generation</depend>
  <depend>rospy</depend>
  <depend>behaviortree_cpp_v3</depend>
  <depend>action_learning_tests</depend>
  <depend>std_msgs</depend>
  <depend>skills_executer</depend>
  <depend>skills_executer_msgs</depend>
  <depend>manipulation_msgs</depend>
  <depend>actionlib_msgs</depend>
  <depend>actionlib</depend>
  <depend>roscpp</depend>

  <exec_depend>message_runtime</exec_depend>



  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
